@@ -1,3 +1,7 @@
+r117:
+fix : block-dependency command line (issue 127)
+fix : lz4fullbench (issue 128)
+
 r116:
 hotfix (issue 124 & 125)
 
